--- a/recycled-materials-art.html
+++ b/recycled-materials-art.html
@@ -35,11 +35,11 @@
                         <img src="/img/5e89d5eaa6b2c11dc4a73324_custom%20%E2%80%93%201.png" width="145" alt=""/>
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
-                       <a href="skillbattle.in" class="w-nav-link">Home</a>
-                        <a href="skillbattle.in#about" class="w-nav-link">about</a>
-                        <a href="skillbattle.in#competitions" id="competitons-grid" class="w-nav-link">Competitions</a>
-                        <a href="skillbattle.in#prizes" class="w-nav-link">Prizes</a>
-                        <a href="skillbattle.in#rules" class="w-nav-link">Rules</a>
+                       <a href="www.skillbattle.in" class="w-nav-link">Home</a>
+                        <a href="www.skillbattle.in#about" class="w-nav-link">about</a>
+                        <a href="www.skillbattle.in#competitions" id="competitons-grid" class="w-nav-link">Competitions</a>
+                        <a href="www.skillbattle.in#prizes" class="w-nav-link">Prizes</a>
+                        <a href="www.skillbattle.in#rules" class="w-nav-link">Rules</a>
                         <a data-w-id="fa9ebae7-d501-6f38-7821-af1590ec3047" href="https://forms.gle/fRLRjCxrjZprFCug8" target="_blank" class="button-2 register w-button">Register</a>
                     </nav>
                     <div class="w-nav-button">
