--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
             <div class="centered-container w-container">
                 <h2 class="heading-11">COMPETITIONS</h2>
                 <div class="cards-grid-container-3">
-                    <div id="w-node-439414952663-ce1e1fd8">
+                    <div id="w-node-439414952663-ce1e1fd8"><a href="recycled-materials-art.html">
                         <div class="cards-image-mask">
                             <img src="/img/5e897b8a4fbaea105820088d_clip-unsubscribed.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Recycled material arts</h5>
+                        <h5 class="title-competitions">Recycled material arts</h5></a>
                     </div>
                     <div id="w-node-9960f03f565d-ce1e1fd8">
                         <div class="cards-image-mask">
