--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="centered-container w-container">
                 <h2 class="heading-11">COMPETITIONS</h2>
                 <div class="cards-grid-container-3">
-                    <div id="w-node-439414952663-ce1e1fd8"><a href="recycled-materials-art.html">
+                    <div id="w-node-439414952663-ce1e1fd8"><a href="recycled-materials-art.html" style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e897b8a4fbaea105820088d_clip-unsubscribed.png" alt="" class="cards-image-3"/>
                         </div>
