--- a/web-appdesign.html
+++ b/web-appdesign.html
@@ -60,7 +60,7 @@
                     <p class="paragraph-4">
                         Bored at home here is an opportunity to use your time productively at home and win exciting prizes.<br/>
                         ‍<br/>
-                       Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).<br/>
+                       Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).<br/><br/>Application development signifies the code development and deployment of all the computer applications we use today. Basically, an app is a software product designed to help us finish a task easier with minimal effort on the end of the user
                         ‍<br/>
                        Here is the opportunity for you to develop website according to the given theme:<br/>
                        Develop a website for laptop/pc repair home pickup service
