--- a/index.html
+++ b/index.html
@@ -96,53 +96,53 @@
                         <div class="cards-image-mask">
                             <img src="/img/5e897b8a4fbaea105820088d_clip-unsubscribed.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Recycled material arts</h5></a>
+                        <h5 class="title-competitions" style="color: #000;">Recycled material arts</h5></a>
                     </div>
-                    <div id="w-node-9960f03f565d-ce1e1fd8">
+                    <div id="w-node-9960f03f565d-ce1e1fd8"><a href="web-appdesign.html"  style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e897af0fbc2c04d2bd6bffd_clip-bad-gateaway.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Web/App design</h5>
+                        <h5 class="title-competitions"style="color: #000;">Web/App design</h5></a>
                     </div>
                     <div id="w-node-b52ad0cfb579-ce1e1fd8">
-                        <div id="w-node-a08df56661bc-ce1e1fd8">
+                        <div id="w-node-a08df56661bc-ce1e1fd8"><a href="phototopainting.html" style="text-decoration: none;">
                             <div class="cards-image-mask">
                                 <img src="/img/5e897ac7bcf6e1b3f8c59a2b_clip-coming-soon.png" alt="" class="cards-image-3"/>
                             </div>
-                            <h5 class="title-competitions">Photo to Painting</h5>
+                            <h5 class="title-competitions"style="color: #000;">Photo to Painting</h5></a>
                         </div>
                     </div>
-                    <div id="w-node-71180424c310-ce1e1fd8">
+                    <div id="w-node-71180424c310-ce1e1fd8"><a href="photo-videoediting.html"  style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e897c3d58eddec0ed73225f_flame-teamwork.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Photo/Video Editing</h5>
+                        <h5 class="title-competitions"style="color: #000;">Photo/Video Editing</h5></a>
                     </div>
                     <div id="w-node-b52ad0cfb580-ce1e1fd8">
-                        <div id="w-node-2e5ca6672e78-ce1e1fd8">
+                        <div id="w-node-2e5ca6672e78-ce1e1fd8"><a href="redesignfashion.html" style="text-decoration: none;">
                             <div class="cards-image-mask">
                                 <img src="/img/5e89813658edde0fd0733064_fashion-illustration-with-female-model_23-2148216244.jpg" alt="" class="cards-image-3"/>
                             </div>
-                            <h5 class="title-competitions">Redesign Fashion</h5>
+                            <h5 class="title-competitions"style="color: #000;">Redesign Fashion</h5></a>
                         </div>
                     </div>
-                    <div id="w-node-b7f1c0f76265-ce1e1fd8">
+                    <div id="w-node-b7f1c0f76265-ce1e1fd8"><a href="singing-dancing-standup.html" style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e897a8a58edde23fc731f0b_clip-1.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Singing/Dancing/Stand-up comedy</h5>
+                        <h5 class="title-competitions"style="color: #000;">Singing/Dancing/Stand-up comedy</h5></a>
                     </div>
-                    <div id="w-node-89e515b23224-ce1e1fd8">
+                    <div id="w-node-89e515b23224-ce1e1fd8"><a href="digitaldesign.html" style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e89800206f6709c42d05883_flame-design-science.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Digital Design</h5>
+                        <h5 class="title-competitions"style="color: #000;">Digital Design</h5></a>
                     </div>
-                    <div id="w-node-5d28e94be1f0-ce1e1fd8">
+                    <div id="w-node-5d28e94be1f0-ce1e1fd8"><a href="videography-vfx.html" style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e8981d3bebe7d0671032518_130722924-video-editor-concept.jpg" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions">Videography/VFX</h5>
+                        <h5 class="title-competitions"style="color: #000;">Videography/VFX</h5></a>
                     </div>
                 </div>
             </div>
