--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
                             <h5 class="title-competitions"style="color: #000;">Photo to Painting</h5></a>
                         </div>
                     </div>
-                    <div id="w-node-71180424c310-ce1e1fd8"><a href="photo-videoediting.html"  style="text-decoration: none;">
+                    <div id="w-node-71180424c310-ce1e1fd8"><a href="musicalinstruments.html"  style="text-decoration: none;">
                         <div class="cards-image-mask">
                             <img src="/img/5e897c3d58eddec0ed73225f_flame-teamwork.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions"style="color: #000;">Photo/Video Editing</h5></a>
+                        <h5 class="title-competitions"style="color: #000;">Musical Instruments</h5></a>
                     </div>
                     <div id="w-node-b52ad0cfb580-ce1e1fd8">
                         <div id="w-node-2e5ca6672e78-ce1e1fd8"><a href="redesignfashion.html" style="text-decoration: none;">
