--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="cards-image-mask">
                             <img src="/img/5e897c3d58eddec0ed73225f_flame-teamwork.png" alt="" class="cards-image-3"/>
                         </div>
-                        <h5 class="title-competitions"style="color: #000;">Musical Instruments</h5></a>
+                        <h5 class="title-competitions"style="color: #000;">Music(Instrumental)</h5></a>
                     </div>
                     <div id="w-node-b52ad0cfb580-ce1e1fd8">
                         <div id="w-node-2e5ca6672e78-ce1e1fd8"><a href="redesignfashion.html" style="text-decoration: none;">
