--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                     <div id="w-node-71180424c310-ce1e1fd8"><a href="musicalinstruments.html"  style="text-decoration: none;">
                         <div class="cards-image-mask">
-                            <img src="/img/5e897c3d58eddec0ed73225f_flame-teamwork.png" alt="" class="cards-image-3"/>
+                            <img src="/img/clip-1.png" alt="" class="cards-image-3"/>
                         </div>
                         <h5 class="title-competitions"style="color: #000;">Music(Instrumental)</h5></a>
                     </div>
