--- a/phototopainting.html
+++ b/phototopainting.html
@@ -64,13 +64,13 @@
                         ‍<br/>
                         Are you ready to paint yours?<br/>
                         ‍<br/>
-                        <strong>The amount of rubbish we create is constantly increasing because:</strong>
+                       
                     </p>
                    
                 </div>
                 <div>
                     <div style="padding-top:56.17021276595745%" id="w-node-990385d64ec2-12e2f10d" class="w-embed-youtubevideo youtube-2">
-                        <iframe src="https://www.youtube.com/watch?v=KerRXbBq8rE&amp;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                        <iframe src="https://youtu.be/KerRXbBq8rE;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
                     </div>
                 </div>
                 <div>
