--- a/phototopainting.html
+++ b/phototopainting.html
@@ -70,7 +70,7 @@
                 </div>
                 <div>
                     <div style="padding-top:56.17021276595745%" id="w-node-990385d64ec2-12e2f10d" class="w-embed-youtubevideo youtube-2">
-                        <iframe src="<iframe width="560" height="315" src="https://www.youtube.com/embed/KerRXbBq8rE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>;controls=1&amp;autoplay=0&amp;mute=0&amp;start=0" frameBorder="0" style="position:absolute;left:0;top:0;width:100%;height:100%;pointer-events:auto" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
+                       <iframe width="560" height="315" src="https://www.youtube.com/embed/KerRXbBq8rE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div>
