--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <div class="tag-wrapper">
                         <div data-w-id="e23d1a8d-f729-eac7-bb43-9b250eccf9ef" style="opacity:0" class="card card4-content">
                             <div class="tagline tagline-promo-40">Amazon Vouchers</div>
-                            <h3 class="card-headline dark-card-headline _6col-card">Amazon Vouchers worth Rs.3000</h3>
+                            <h3 class="card-headline dark-card-headline _6col-card">Amazon Vouchers worth upto Rs.3000</h3>
                         </div>
                         <div class="divider"></div>
                     </div>
