--- a/recycled-materials-art.html
+++ b/recycled-materials-art.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"/>
@@ -35,7 +35,7 @@
                         <img src="/img/5e89d5eaa6b2c11dc4a73324_custom%20%E2%80%93%201.png" width="145" alt=""/>
                     </a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
-                       <a href="https://www.skillbattle.in" class="w-nav-link">Home</a>
+                        <a href="https://www.skillbattle.in" class="w-nav-link">Home</a>
                         <a href="https://www.skillbattle.in#about" class="w-nav-link">about</a>
                         <a href="https://www.skillbattle.in#competitions" id="competitons-grid" class="w-nav-link">Competitions</a>
                         <a href="https://www.skillbattle.in#prizes" class="w-nav-link">Prizes</a>
@@ -107,16 +107,17 @@
                     <p class="paragraph-5">
                         <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         72(3 days) hours from the time of registration.<br/>
                         &gt;&gt;Time elapse video of your product making: about 1 minute·         <br/>
                         &gt;&gt;Picture of the product you made (from all angles)<br/>
                         <br/>
-                        <strong>
-                            Organisers will Message you about the Further Updates Through WhatsApp<br/>
-                            <br/>#SKILLBATTLE
-                        </strong>
+                        <strong>#SKILLBATTLE</strong>
                     </p>
                     <a data-w-id="726aae40-3b63-55ad-8545-5cb71948e6d2" href="https://forms.gle/fRLRjCxrjZprFCug8" target="_blank" class="button-2 register w-button">Register</a>
                 </div>
