--- a/redesignfashion.html
+++ b/redesignfashion.html
@@ -95,8 +95,12 @@
                         <li class="list-item-3">Look of the final product</li>
                     </ul>
                     <p class="paragraph-5">
-                        <strong>
+                      <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         72hours (3 days) from the time of registration.<br/>
