--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -83,13 +83,9 @@
                             ‍<br/>‍
                         </strong>
                         Open to all students pursuing their graduation or diploma courses.<br/>
-                        ‍<br/>Submissions must be exclusively comprised of fully recycled/reused materials; can include elements such as:
+                        ‍<br/>
                     </p>
-                    <ul class="list-6">
-                        <li>Waste materials from home </li>
-                        <li class="list-item-3">Plastics etc</li>
-                        <li>Used shampoo bottles, polyethene’s. Etc</li>
-                    </ul>
+                  
                 </div>
                 <div class="div-block-3">
                     <p>
@@ -99,12 +95,16 @@
                     <ul class="list-6">
                         <li>Content explanation through poster</li>
                         <li class="list-item-3">Creativity</li>
-                        <li>Creativity</li>
+                     
                         <li class="list-item-3">Percentage of theme matching</li>
                     </ul>
                     <p class="paragraph-5">
-                        <strong>
+                         <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         72(3 days) hours from the time of registration.<br/>
