--- a/videography-vfx.html
+++ b/videography-vfx.html
@@ -90,9 +90,14 @@
                     </ul>
                     <p class="paragraph-5">
                         <strong>
-                            Submissions:<br/><br/>
 
-                            Select (from YouTube) or shoot some raw footage and edit that video and add some vfx to it and make it up to a 2 min video and submit it.
+                            Select (from YouTube) or shoot some raw footage and edit that video and add some vfx to it and make it up to a 2 min video and submit it.<br/>
+                            Submissions:<br/><br/> 
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                          
+                        </strong>
+                           
                         <br/>
                             ‍<br/>Deadline:
                         </strong>
