--- a/singing-dancing-standup.html
+++ b/singing-dancing-standup.html
@@ -110,8 +110,12 @@
                     </ul>
 
                     <p class="paragraph-5">
-                        <strong>
+                       <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         36hours(1.5days) from the time of registration.<br/>
