--- a/web-appdesign.html
+++ b/web-appdesign.html
@@ -63,7 +63,7 @@
                        Web development is the work involved in developing a website for the Internet (World Wide Web) or an intranet (a private network).<br/><br/>Application development signifies the code development and deployment of all the computer applications we use today. Basically, an app is a software product designed to help us finish a task easier with minimal effort on the end of the user
                         ‍<br/>
                        Here is the opportunity for you to develop website according to the given theme:<br/>
-                       Develop a website for laptop/pc repair home pickup service
+                       <strong>Design/Develop a website/App for laptop/pc repair home pickup service</strong>
                         ‍<br/>
                         <strong>Key notes:</strong>
                     </p>
@@ -98,8 +98,12 @@
                         <li class="list-item-3">Overall Presentation</li>
                     </ul>
                     <p class="paragraph-5">
-                        <strong>
+                      <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         240hours (10 days) from the time of registration.<br/>
