--- a/phototopainting.html
+++ b/phototopainting.html
@@ -64,7 +64,7 @@
                         ‍<br/>
                         Are you ready to paint yours?<br/>
                         ‍<br/>
-                       
+                       <strong>Choose a picture of Couple or a Person and paint it</strong>
                     </p>
                    
                 </div>
@@ -95,8 +95,12 @@
                         <li class="list-item-3">The portrait chosen</li>
                     </ul>
                     <p class="paragraph-5">
-                        <strong>
+                      <strong>
                             Submissions:<br/>
+                            <strong>
+                            Organisers will Message you about the Further Updates Through WhatsApp after Registration<br/>
+                            <br/>
+                        </strong>
                             ‍<br/>Deadline:
                         </strong>
                         72(3 days) hours from the time of registration.<br/>
